istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: azure-vote-vs
spec:
  hosts:
  - "*"
  gateways:
  - microservices-gateway
  http:
  - route:
    - destination:
        host: azure-vote-front
        port:
          number: 80
